# devops-knowledge

./: Bez nazwy.md  CLAUDE.md  CODEX.md  README.md  level1-map.json  log-part-1.md  log-part-2.md  log-part-3.md  log-part-4.md  runtime-incidents-report.md  tree.txt  vpc-endpoints-dev-before-tags-20260424-221906.json
.obsidian/: app.json  community-plugins.json  graph.json  workspace.json
00-start-here/: Kontrakt komunikacji — v1.md  LLM_CONTEXT.md  README.md  how-to-use-this-vault.md  persona.md
01-inbox/: LLM_CONTEXT.md  README.md  quick-capture.md
02-active-context/: LLM_CONTEXT.md  current-focus.md  now.md  open-loops.md  waiting-for.md
10-areas/: LLM_CONTEXT.md  obsidian-git-setup.md
20-projects/: LLM_CONTEXT.md
20-projects/internal/udemy-transcript-tool/: .gitignore  README.md  pyproject.toml  run.sh  session-log.md
20-projects/internal/udemy-transcript-tool/udemy_obsidian/: browser.py  cli.py  config.py  discovery.py  extraction.py  manifest.py  models.py  normalization.py  renderer.py  writer.py
30-patterns/: cloudformation-drift-reconciliation-vpc-endpoint-tags.md
30-standards/: LLM_CONTEXT.md  aws-tagging-standard.md  cicd-standard.md  documentation-standard.md  iac-standard.md  naming-conventions.md
40-runbooks/: LLM_CONTEXT.md  pbms-troubleshoot.md  planodkupow-rabbitmq-cfn-refactor.md  planodkupow-tagging-finops.md
50-patterns/: LLM_CONTEXT.md  debugging-patterns.md  finops-review-patterns.md  incident-analysis-patterns.md  migration-patterns.md  reusable-prompts.md
60-toolkit/: LLM_CONTEXT.md  README.md  architecture-overview.md  (+12 more)
(+469 files in other folders)
