[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "udemy-obsidian"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.44",
    "click>=8.1",
]

[project.scripts]
udemy-obsidian = "udemy_obsidian.cli:cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["udemy_obsidian*"]
